Base: CLM-38327 Replace OpenJPA with jOOQ (#15014)
Co-authored-by: Joseph Stephens <jstephens@sonatype.com>
Co-authored-by: Claude <noreply@anthropic.com>
Co-authored-by: Moncef <mben-soula@sonatype.com>
Co-authored-by: rmealing <rmealing@sonatype.com>
Co-authored-by: Moncef Ben-Soula <SirMaster@users.noreply.github.com>