@@ -5,8 +5,12 @@
  */
 package com.sonatype.insight.brain.dataaccess.innersource;
 
+import java.util.Collection;
 import java.util.List;
 import java.util.Set;
+import com.google.common.collect.Lists;
+import org.jooq.Table;
+import static java.util.stream.Collectors.toList;
 import jakarta.inject.Inject;
 import jakarta.inject.Named;
 import jakarta.inject.Singleton;
@@ -16,6 +20,8 @@ import com.sonatype.insight.brain.db.datastore.OperationalDataStore;
 import com.sonatype.insight.brain.model.innersource.InnerSourceApplication;
 import com.sonatype.insight.dataaccess.TransactionContext;
 import com.sonatype.insight.purl.PackageUrlIdentifier;
+
+import static com.sonatype.insight.brain.jooq.generated.ods.tables.InnerSourceApplication.INNER_SOURCE_APPLICATION;
 
 @Named
 @Singleton
@@ -30,8 +36,10 @@ public class InnerSourceApplicationDAO
   }
 
   public List<InnerSourceApplication> getByApplicationId(TransactionContext tx, String appId) {
-    String sQuery = "SELECT entity FROM InnerSourceApplication entity WHERE entity.applicationId=?1";
-    return getList(tx, sQuery, appId);
+    return tx.dsl()
+        .selectFrom(INNER_SOURCE_APPLICATION)
+        .where(INNER_SOURCE_APPLICATION.APPLICATION_ID.eq(appId))
+        .fetch(this::toEntity);
   }
 
   public List<InnerSourceApplication> getByApplicationId(String appId) {
@@ -42,8 +50,10 @@ public class InnerSourceApplicationDAO
 
   public InnerSourceApplication getByPackageUrl(PackageUrlIdentifier packageUrl) {
     try (TransactionContext tx = createTransactionContext()) {
-      String sQuery = "SELECT entity FROM InnerSourceApplication entity WHERE entity.packageUrl=?1";
-      return get(tx, sQuery, packageUrl.getPackageUrl());
+      return toEntity(tx.dsl()
+          .selectFrom(INNER_SOURCE_APPLICATION)
+          .where(INNER_SOURCE_APPLICATION.PACKAGE_URL.eq(packageUrl.getPackageUrl()))
+          .fetchOne());
     }
   }
 
@@ -52,15 +62,36 @@ public class InnerSourceApplicationDAO
       String excludedApplicationId)
   {
     try (TransactionContext tx = createTransactionContext()) {
-      String sQuery = "SELECT entity FROM InnerSourceApplication entity" +
-          " WHERE entity.packageUrl=?1 and entity.applicationId<>?2";
-      return get(tx, sQuery, packageUrl.getPackageUrl(), excludedApplicationId);
+      return toEntity(tx.dsl()
+          .selectFrom(INNER_SOURCE_APPLICATION)
+          .where(INNER_SOURCE_APPLICATION.PACKAGE_URL.eq(packageUrl.getPackageUrl()))
+          .and(INNER_SOURCE_APPLICATION.APPLICATION_ID.ne(excludedApplicationId))
+          .fetchOne());
     }
   }
 
   public List<InnerSourceApplication> getByPackageUrls(Set<PackageUrlIdentifier> packageUrls) {
-    String sQuery = "SELECT entity FROM InnerSourceApplication entity WHERE entity.packageUrl IN (?1)";
-    return getListWithSqlInClause(packageUrls.stream().map(PackageUrlIdentifier::getPackageUrl).toList(),
-        inClauseValuesPartition -> getList(sQuery, inClauseValuesPartition));
+    List<String> urls = packageUrls.stream().map(PackageUrlIdentifier::getPackageUrl).toList();
+    List<List<String>> partitions = Lists.partition(urls, getInOperatorThreshold());
+
+    try (TransactionContext tx = createTransactionContext()) {
+      return partitions.stream()
+          .map(partition -> tx.dsl()
+              .selectFrom(INNER_SOURCE_APPLICATION)
+              .where(INNER_SOURCE_APPLICATION.PACKAGE_URL.in(partition))
+              .fetch(this::toEntity))
+          .flatMap(Collection::stream)
+          .collect(toList());
+    }
+  }
+
+  @Override
+  public Table<?> getJooqTable() {
+    return INNER_SOURCE_APPLICATION;
+  }
+
+  @Override
+  public Class<InnerSourceApplication> getEntityClass() {
+    return InnerSourceApplication.class;
   }
 }
